Add email confirm API
